# notifications-service

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.optimized  README.md  ontwerp.json  test_suite.py
docs/: GAP_ANALYSE_CORE_INTEGRATIE.md
k8s/: deployment.yaml
migrations/: 001_error_tracking.sql  002_notify_trigger.sql  003_cleanup_unused.sql
src/: config.rs  lib.rs  main.rs
src/db/: listener.rs  mod.rs  pool.rs  queries.rs
src/models/: mod.rs  notification.rs
src/push/: fcm.rs  mod.rs
src/worker/: mod.rs  processor.rs
src/ws/: connection.rs  manager.rs  mod.rs  server.rs
tests/: integration_test.rs
