[package]
name = "notifications-service"
version = "0.1.0"
edition = "2021"
authors = ["GoAmet"]
description = "Rust notification worker + WebSocket server + FCM Push"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "sync"] }

# Web framework + WebSocket
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# FCM Push (HTTP v1 API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
thiserror = "1"
futures = "0.3"
base64 = "0.22"

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

[profile.release]
lto = true
codegen-units = 1
strip = true
